general cleanup of delta system ops functionality
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@19603 7fc7bbf3-cf45-46d4-be06-341739edd864